--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fabriconstruc</title>
+    <link rel="icon" type="image/svg+xml" href="/fabriconstruc_icon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fabriconstruc Web</title>
   </head>
   <body class="bg-white text-gray-800">
     <div id="root"></div>
